syntax = "proto3";

service PaymentService {
    rpc PurchasePayment(PaymentRequest) returns (PaymentResponse);
    rpc SuccessPayment(SuccessPaymentRequest) returns (SuccessPaymentResponse);
}

message SuccessPaymentRequest {
    string sessionId = 1;
} 

message SuccessPaymentResponse {
    metedata data = 1;
    bool success = 2;
    string message = 3;
}
message metedata {
    string courseId = 1;
    string userId = 2;
    string tutorId = 3;
    string category = 4;
    string thumbnail = 5;
    string title = 6;
    string price = 7;
    string level = 8;
    string totalLessons = 9;
    string transactionId = 10;
}

message PaymentRequest {
    string courseId = 1;
    string userId = 2;
    string tutorId = 3;
    string category = 4;
    string thumbnail = 5;
    string title = 6;
    string price = 7;
    string level = 8;
    string totalLessons = 9;
}

message PaymentResponse {
    string session_id = 1;          // Change this to sessionId for consistency
}